@@ -8,6 +8,7 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 ### Changed
 
 * IS_EVOMAINTENANCE_FW : warn only if HOOK_DB is enabled
+* IS_BACKUPUPTODATE : check backup dates in the correct directory
 
 ### Fixed
 
